initially complete login and password set

--- a/gui/home.html
+++ b/gui/home.html
@@ -1,24 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
 <body>
-    <h1>Hello, world!</h1>
-    <p id="username"></p>
+    <h1>Welcome!</h1>
 </body>
-
-<script>
-    var username = document.getElementById("username");
-
-    var os = require('os');
-    console.log(os.userInfo().username);
-    username.innerHTML = os.userInfo().username;
-</script>
-
 </html>
