--- a/gui/login.html
+++ b/gui/login.html
@@ -16,9 +16,9 @@
         <h3 style="text-align: center; margin: auto 40px auto;">Please Enter Your Password to Access File Vault</h3>
         <div class="gap-20"></div>
         <div style="text-align: center;">
-            <input style="width: 220px; height: 22px; text-align: center; font-size: 16px; font-weight: bolder;" type="text" id="name" readonly>
+            <input style="width: 220px; height: 22px; border-radius: 1px; text-align: center; font-size: 16px; font-weight: bolder;" type="text" id="name" readonly>
             <div class="gap-2"></div>
-            <input style="width: 220px; height: 22px; text-align: center; font-size: 16px;" type="password" id="password" placeholder="password">
+            <input style="width: 220px; height: 22px; border-radius: 1px; text-align: center; font-size: 16px;" type="password" id="password" placeholder="password">
         </div>
         <div class="gap-40"></div>
         <div class="btns" style="text-align: center;">
