--- a/gui/home.html
+++ b/gui/home.html
@@ -8,8 +8,9 @@
     <title>Document</title>
 </head>
 
-<body>
+<body id="body">
     <h1>Welcome!</h1>
+    <div id="test">hi</div>
     <div id="list"></div>
 </body>
 <script src="./render/home.js"></script>
