complete dic delete & rename

--- a/gui/home.html
+++ b/gui/home.html
@@ -8,9 +8,8 @@
     <title>Document</title>
 </head>
 
-<body id="body">
+<body>
     <h1>Welcome!</h1>
-    <div id="test">hi</div>
     <div id="list"></div>
 </body>
 <script src="./render/home.js"></script>
