--- a/gui/home.html
+++ b/gui/home.html
@@ -5,12 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <link rel="stylesheet" type="text/css" href="./styles.css">
+    <title>Encrypted File Vault System ~ Home Page</title>
 </head>
 
-<body>
-    <h1>Welcome!</h1>
-    <div id="list"></div>
+<body background="./static/img/blur_background.jpg">
+    <div class="file_panel">
+        <h1 style="text-align: center; color: dimgray;" >Encrypted File Vault</h1>
+        <div id="list"></div>
+    </div>
 </body>
 <script src="./render/home.js"></script>
 
