--- a/gui/home.html
+++ b/gui/home.html
@@ -11,9 +11,11 @@
 </head>
 
 <body background="./static/img/blur_background.jpg">
-    <div class="file_panel">
+    <div class="vault_panel" >
         <h1 style="text-align: center; color: dimgray;" >Encrypted File Vault</h1>
-        <div id="list"></div>
+        <div class="display_panel" style="overflow-x: auto">
+            <div id="list"></div>
+        </div>
     </div>
 </body>
 <script src="./render/home.js"></script>
