--- a/gui/home.html
+++ b/gui/home.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="./styles.css">
+    <link rel="stylesheet" type="text/css" href="./static/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="./static/css/font-awesome.min.css">
     <title>Encrypted File Vault System ~ Home Page</title>
 </head>
 
