--- a/gui/home.html
+++ b/gui/home.html
@@ -13,7 +13,8 @@
 
 <body background="./static/img/blur_background.jpg">
     <div class="vault_panel" >
-        <h1 style="text-align: center; color: dimgray;" >Encrypted File Vault</h1>
+        <div class="path_panel" id="file_path" style="font-size: 17px;font-weight: bolder;color:rgb(54,54,54);"></div>
+        <h1 style="text-align: center; color: dimgray;" >Encrypted File Vault System</h1>
         <div class="display_panel" style="overflow-x: auto">
             <div id="list"></div>
         </div>
