--- a/gui/home.html
+++ b/gui/home.html
@@ -14,9 +14,25 @@
 <body background="./static/img/blur_background.jpg">
     <div class="vault_panel" >
         <div class="path_panel" id="file_path" style="font-size: 17px;font-weight: bolder;color:rgb(54,54,54);"></div>
+        <div class="back_panel" id="back_button"></div>
         <h1 style="text-align: center; color: dimgray;" >Encrypted File Vault System</h1>
         <div class="display_panel" style="overflow-x: auto">
             <div id="list"></div>
+        </div>
+        <div class="home_panel">
+            <a href="home.html" title="Home Page">
+                <i class="fa fa-home" style="font-size: 36px;color: rgb(54,54,54);"></i>
+            </a>
+        </div>
+        <div class="pie_panel">
+            <a href="stats.html" title="Vault Statistics">
+                <i class="fa fa-bar-chart" style="font-size: 32px;color: rgb(54,54,54);"></i>
+            </a>
+        </div>
+        <div class="logout_panel">
+            <a href="login.html" title="Logout">
+                <i class="fa fa-sign-out" style="font-size: 36px;color: rgb(54,54,54);"></i>
+            </a>
         </div>
     </div>
 </body>
