--- a/gui/stats.html
+++ b/gui/stats.html
@@ -41,10 +41,8 @@
     </div>
 </body>
 
-
-<script src="./static/js/echarts.js"></script>
-
 <script type="text/javascript">
+    var echarts = require('echarts');
     var chartDom = document.getElementById('pie-chart');
     var myChart = echarts.init(chartDom);
 
@@ -133,7 +131,7 @@
 </script>
 
 <script type="text/javascript">
-
+    var echarts = require('echarts');
     var chartDom = document.getElementById('pop-chart');
     var myChart = echarts.init(chartDom);
     var option;
