--- a/gui/stats.html
+++ b/gui/stats.html
@@ -213,9 +213,9 @@
 
             return '<div style="font-size: 16px; font-weight:900; padding-bottom: 7px;margin-bottom: 2px; color:dimgray">'
                         + 'Day' + value[0] + ': <br>' 
-                        + 'File Name： ' + value[2] + '<br>'
+                        + 'File Name: ' + value[2] + '<br>'
                         + 'Category: ' + param.seriesName + '<br>'
-                        + 'File Size： ' + value[1] + ' MB'
+                        + 'File Size: ' + value[1] + ' MB'
                         '</div>'
             }
         },
