ADD Upload Zone

--- a/gui/home.html
+++ b/gui/home.html
@@ -19,6 +19,16 @@
         <div class="display_panel" style="overflow-x: auto">
             <div id="list"></div>
         </div>
+
+        <div class="dropzone_panel" id="dropzone">
+            <div class="boxtitle" id="boxtitle">
+                Drop Files Here
+            </div>
+        </div>
+        <h2>Directory tree:</h2>
+        <ul id="listing">
+        </ul>
+
         <div class="home_panel">
             <a href="home.html" title="Home Page">
                 <i class="fa fa-home" style="font-size: 36px;color: rgb(54,54,54);"></i>
