--- a/gui/home.html
+++ b/gui/home.html
@@ -21,14 +21,20 @@
         </div>
 
         <div class="dropzone_panel" id="dropzone">
-            <div class="boxtitle" id="boxtitle">
-                Drop Files Here
+            <div class="boxtitle_panel" id="boxtitle">
+                Drop and Upload <i class="fa fa-upload"></i>
+                 File Here
             </div>
         </div>
 
         <div class="home_panel">
             <a href="home.html" title="Home Page">
                 <i class="fa fa-home" style="font-size: 36px;color: rgb(54,54,54);"></i>
+            </a>
+        </div>
+        <div class="help_panel">
+            <a href="info.html" title="Usage Guide">
+                <i class="fa fa-question-circle" style="font-size: 35px;color: rgb(54,54,54);"></i>
             </a>
         </div>
         <div class="pie_panel">
