--- a/gui/stats.html
+++ b/gui/stats.html
@@ -28,6 +28,11 @@
                 <i class="fa fa-home" style="font-size: 36px;color: rgb(54,54,54);"></i>
             </a>
         </div>
+        <div class="help_panel">
+            <a href="info.html" title="Usage Guide">
+                <i class="fa fa-question-circle" style="font-size: 35px;color: rgb(54,54,54);"></i>
+            </a>
+        </div>
         <div class="pie_panel">
             <a href="stats.html" title="Vault Statistics">
                 <i class="fa fa-bar-chart" style="font-size: 32px;color: rgb(54,54,54);"></i>
