adjust some details

--- a/gui/home.html
+++ b/gui/home.html
@@ -35,7 +35,7 @@
         </div>
 
         <div class="boxtitle_panel" id="boxtitle">
-            Darg and Drop to Upload <i class="fa fa-upload"></i> File
+            Drag and Drop to Upload <i class="fa fa-upload"></i> File
         </div>
 
         <div class="home_panel">
