adjust some details

--- a/gui/home.html
+++ b/gui/home.html
@@ -11,7 +11,7 @@
     <title>Encrypted File Vault System ~ Home Page</title>
 </head>
 
-<body background="./static/img/blur_background.jpg">
+<body background="">
     <div class="vault_panel" >
         <div class="path_panel" id="file_path" style="font-size: 17px;font-weight: bolder;color:rgb(54,54,54);"></div>
         <div class="back_panel" id="back_button"></div>
