--- a/gui/info.html
+++ b/gui/info.html
@@ -11,7 +11,7 @@
     <title>Encrypted File Vault System ~ Info Page</title>
 </head>
 
-<body background="./static/img/blur_background.jpg">
+<body background="">
     <div class="vault_panel" >
         <h1 style="text-align: center; color: dimgray;" >Vault Usage Guide</h1>
         <div class="info_panel" style="overflow-x: auto">
