--- a/gui/register.html
+++ b/gui/register.html
@@ -10,7 +10,7 @@
     <title>Encrypted File Vault System ~ Register Page</title>
 </head>
 
-<body background="./static/img/blur_background.jpg">
+<body background="">
     <div class="login_panel" style="height: 80%; top: 10%;">
         <div style="text-align: center;">
             <img src="./static/img/logo.png" width="250px"/>
