--- a/gui/stats.html
+++ b/gui/stats.html
@@ -11,7 +11,7 @@
     <title>Encrypted File Vault System ~ Statistics Page</title>
 </head>
 
-<body background="./static/img/blur_background.jpg">
+<body background="">
     <div class="vault_panel" >
         <h1 style="text-align: center; color: dimgray;" >Vault Statistics Page</h1>
         <div class="stats_panel" style="overflow-x: auto">
